--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineTeer"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".Forgot_Password"
+            android:name=".Home_Screen"
+            android:exported="false"
+            android:label="@string/title_activity_home_screen" />
+        <activity
+            android:name=".auth.Forgot_Password"
             android:exported="false" />
         <activity
-            android:name=".Registration_form"
+            android:name=".auth.Registration_form"
             android:exported="false" />
-        <activity
-            android:name=".Login_screen"
-            android:exported="false" />
+        <activity android:name=".auth.Login_screen"
+            android:exported="false"/>
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -30,18 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.OnlineTeer">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
