--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ android {
 
 dependencies {
 
+
+    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
